--- a/src/Skybrud.Umbraco.Spa/Skybrud.Umbraco.Spa.csproj
+++ b/src/Skybrud.Umbraco.Spa/Skybrud.Umbraco.Spa.csproj
@@ -6,23 +6,23 @@
 
   <PropertyGroup>
     <RootNamespace>Skybrud.Umbraco.Spa</RootNamespace>
-    <Version>3.0.0-beta014</Version>
+    <Version>3.0.0</Version>
     <Company>Limbo</Company>
     <Product>Skybrud.Umbraco.Spa</Product>
     <Authors>Anders Bjerner</Authors>
-    <Copyright>Copyright © 2021</Copyright>
+    <Copyright>Copyright © $([System.DateTime]::UtcNow.ToString(`yyyy`))</Copyright>
     <Description>SPA (single page application) package for Umbraco 8.</Description>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/skybrud/Skybrud.Umbraco.Spa</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageTags>Skybrud, Umbraco, SPA, Headless</PackageTags>
+    <PackageTags>Skybrud, Limbo, Umbraco, SPA, Headless</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/skybrud/Skybrud.Umbraco.Spa</PackageProjectUrl>
+    <PackageProjectUrl>https://packages.skybrud.dk/skybrud.umbraco.spa/</PackageProjectUrl>
     <PackageIcon>Limbo.png</PackageIcon>
   </PropertyGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Skybrud.Essentials" Version="1.1.52" />
     <PackageReference Include="Skybrud.Umbraco.GridData" Version="3.0.1" />
@@ -30,13 +30,13 @@
     <PackageReference Include="Skybrud.Umbraco.Redirects" Version="2.0.6">
       <ExcludeAssets>contentFiles</ExcludeAssets>
     </PackageReference>
-    <PackageReference Include="UmbracoCms.Web" Version="8.1.0">
+    <PackageReference Include="UmbracoCms.Web" Version="[8.1.0,8.999)">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../build/Limbo.png" Pack="true" PackagePath="\"/>
+    <None Include="../build/Limbo.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <PropertyGroup>
